@@ -1,1 +1,4 @@
-= Partner with WIT
+= 
+:sectanchors:
+
+include::src/html/adoc/navbar.adoc[]Partner with WIT
