@@ -1,1 +1,4 @@
 = Portfolio
+:sectanchors:
+
+include::src/html/adoc/navbar.adoc[]
