@@ -1,1 +1,4 @@
 = How WIT works
+:sectanchors:
+
+include::src/html/adoc/navbar.adoc[]
