@@ -48,60 +48,70 @@
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="index.html"> Home<span class="sr-only">(current)</span></a></li>
                                 <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About WIT<span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href="OurMission.html">Our Mission</a></li>
-                                        <li><a href="HowWeLearn.html">How do we learn?</a></li>
-                                        <li class="dropdown-submenu"><a tabindex="1" href="#">Agile Method</a>
-                                            <ul class="dropdown-menu">
-                                                <a href="Sprint.html">What is a sprint?</a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Why WIT?<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="TheProblem.html">The Problem</a></li>
+            <li><a href="AgileMethodology.html">Agile Methodology</a></li>
+            <li><a href="NextGeneration.html">Next Generation Education</a></li>
+            <li><a href="PortraitGraduate.html">Portrait of a WIT Graduate</a></li>
+             <li class="dropdown-submenu"><a tabindex="1" href="#">How WIT works</a>
+             <ul class="dropdown-menu">
+                                                <a href="Sprint.html">Sprints</a>
                                                 <br>
-                                                <a href="SCOPS.html">SCOPs</a>
+                                                <a href="SCOPS.html">Extracurricular Activities</a>
                                                 <br>
-                                                <a href="GradingWIT.html">Grading at WIT</a>
+                                                <a href="GradingWIT.html">Grading</a>
+                                                <br>
+                                                <a href="Portfolio.html">Portfolio</a>
                                                 <br>
                                                 <a href="Internships.html">Internships</a>
                                             </ul>
-                                        </li>
+            <li><a href="LifeWIT.html">Life at WIT</a></li>
+          </ul>
+        </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About WIT<span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li><a href="OurMission.html">Our Mission and History</a></li>
                                         <li><a href="PoliciesProcedures.html">Policies and Procedures</a></li>
-                                        <li><a href="OurStaff.html">Our Staff</a></li>
                                         <li><a href="OurLocation.html">Our Location</a></li>
-                                        <li><a href="transportation.html">Transportation</a></li>
+            <li><a href="Transportation.html">Transportation</a></li>
+            <li><a href="OurStaff.html">Our Staff</a></li>
+            <li><a href="OurBoard.html">Our Board</a></li>
+            <li><a href="ContactInformation.html">Contact Us</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Potential Students<span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href="LoveWIT.html">Things to love about WIT</a></li>
-                                        <li><a href="WITForMe.html">Is WIT for me?</a></li>
-                                        <li><a href="EnrollmentProcess.html">Enrollment process and fees</a></li>
-                                        <li><a href="EnrollNow.html">Enroll now</a></li>
-                                    </ul>
-                                </li>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Potential Students<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="WITForMe.html">Is WIT for me?</a></li>
+            <li><a href="LoveWIT.html">Why we love WIT</a></li>
+            <li><a href="EnrollmentProcess.html">Enrollment Process</a></li>
+            <li><a href="Fees.html">Fees</a></li>
+            <li><a href="EnrollNow.html">Enroll now</a></li>
+          </ul>
+        </li>
                                 <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Current Students<span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href="Calendar.html">Calendar and events</a></li>
-                                        <li><a href="CurrentSprint.html">Current sprint</a></li>
-                                        <li><a href="CurrentSCOPs.html">Current SCOPs</a></li>
-                                        <li><a href="StudentPortal.html">Student portal</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Partner With WIT<span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href="CurrentPartners.html">Our current partners</a></li>
-                                        <li><a href="PartneringWIT.html">Is partnering for me?</a></li>
-                                        <li><a href="ContactPartners.html">Contact us</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contact Us<span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href="ContactInformation.html">Contact Information</a></li>
-                                        <li><a href="MakeDonation.html">Make a donation</a></li>
-                                    </ul>
-                                </li>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">News and Events<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="Calendar.html">Calendar</a></li>
+            <li><a href="News.html">News and Events</a></li>
+          </ul>
+        </li>
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Current Students<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="Calendar.html">Calendar</a></li>
+            <li><a href="StudentEvents.html">News and Events</a></li>
+          </ul>
+        </li>
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">You and WIT<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="WorkWIT.html">Work at WIT</a></li>
+            <li><a href="PartneringWIT.html">Partner with WIT</a></li>
+          </ul>
+        </li>
                             </ul>
                     </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
